--- a/frontend/src/components/Navigation.css
+++ b/frontend/src/components/Navigation.css
@@ -34,7 +34,7 @@
     overflow-y: scroll;
     border: 1px solid gray;
     background-color: white;
-    /* width: 200px; */
+    width: 200px;
     z-index: 99;
 }
 
